force-app/main/default/objects/Proposal__c/Proposal__c.object-meta.xml
<CustomObject>
    <label>Proposal</label>
    <nameField>
        <label>Proposal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proposals</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>