force-app/main/default/objects/Proposal__c/fields/Client_Discount__c.field-meta.xml
<CustomField>
    <fullName>Client_Discount__c</fullName>
    <inlineHelpText>Please include the Corporate Member Discount if applicable.</inlineHelpText>
    <label>Client Discount</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>