force-app/main/default/objects/Proposal__c/fields/Deliverable__c.field-meta.xml
<CustomField>
    <fullName>Deliverable__c</fullName>
    <label>Deliverable</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activation Plan</fullName>
                <label>Media Plan</label>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Thought-Starter</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
                <isActive>false</isActive>
                <label>Email</label>
            </value>
            <value>
                <fullName>Phone Call</fullName>
                <isActive>false</isActive>
                <label>Phone Call</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>