force-app/main/default/objects/Proposal__c/fields/Filters__c.field-meta.xml
<CustomField>
    <fullName>Filters__c</fullName>
    <inlineHelpText>Please include a list of filters that are required for this program. Filters may also be attached to the Proposal using the File Upload.</inlineHelpText>
    <label>Filters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>