force-app/main/default/objects/Proposal__c/fields/Product_Quote_Needed__c.field-meta.xml
<CustomField>
    <fullName>Product_Quote_Needed__c</fullName>
    <label>Product Quote Needed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABM Journey</fullName>
            </value>
            <value>
                <fullName>ABM Momentum</fullName>
            </value>
            <value>
                <fullName>Content Creation</fullName>
            </value>
            <value>
                <fullName>Lead Generation</fullName>
            </value>
            <value>
                <fullName>Market Insights</fullName>
            </value>
            <value>
                <fullName>Smart Mail</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>