force-app/main/default/objects/Proposal__c/fields/Proposal_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Delivered__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Proposal Created</label>
    <type>Date</type>
</CustomField>