force-app/main/default/objects/Proposal__c/fields/Proposed_Budget_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Budget_Level_1__c</fullName>
    <label>Budget Tier 1</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>