force-app/main/default/objects/Proposal__c/fields/Request_for_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Request_for_Proposal__c</fullName>
    <label>Proposal Due Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>