force-app/main/default/objects/Proposal__c/fields/Special_Requests__c.field-meta.xml
<CustomField>
    <fullName>Special_Requests__c</fullName>
    <inlineHelpText>Please include any special needs related to this proposal request.</inlineHelpText>
    <label>Special Requests</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>